# actix-boiler-plate

./: Cargo.toml  config.toml
migrations/2025-01-01-114329_create_user_type/: down.sql  up.sql
migrations/2025-01-02-071027_field-sector/: down.sql  up.sql
migrations/2025-01-03-105625_meeting-room/: up.sql
src/: schema.rs
src/app/: error.rs  mod.rs  route.rs
src/app/api/: field_sector.rs  mod.rs  users.rs
src/app/lib/: helpers.rs
src/app/models/: field_sectors.rs  user.rs
tests/: debug_test.rs  field_sector.rs  utils.rs
